# AVL-FIRE-RDM

./: .gitignore  NOMAD_ARCHITECTURE.md  README.md  asix_compact_parser.py  asix_tree_parser.py  compare_input_parameters.py  input_file.json  prototyping.ipynb  prototyping_3D_data.ipynb  pyproject.toml  requirements.txt  ssh_access.ipynb  testing_output.json  testing_output_v1.json  testing_output_v2.json  testing_output_v3.json  transfer_and_convert_2d_data.py  transfer_and_convert_3d_data.py  visualize_2d_data.py  visualize_3d_data.py
.ipynb_checkpoints/: input_file-checkpoint.json  prototyping_3D_data-checkpoint.ipynb
avl_fire_rdm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
old/: pressure_extraction.ipynb  ssh_access.ipynb  testing_v1.ipynb  testing_v2.ipynb
reference_data/: pem_west_measurement_70C.csv  simulation_data.csv
src/: __init__.py  asix_parser.py  ensight_to_xdmf.py  firem_name_parser_integration.py  utils.py
tests/: test_asix_parser.py  test_ensight_to_xdmf.py  test_utils.py
