[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avl-fire-rdm"
version = "0.1.0"
description = "Research data management utilities for CFD simulations with AVL FIRE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "lxml",
    "paramiko",
    "python-dotenv",
    "PyYAML",
    "requests",
    "pyvista",
    "meshio",
    "h5py",
    "matplotlib",
    "plotly",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src"]
